--- a/html/main.html
+++ b/html/main.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>你的标题</title>
+    <title>主页</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -33,37 +33,13 @@
     <!-- Amaze UI CSS -->
     <!--<link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">-->
     <link rel="stylesheet" href="../assets/css/font-awesome.css">
+    <link rel="stylesheet" href="../assets/css/LCommon.css">
     <script src="../assets/js/jquery.min.js"></script>
     <link rel="stylesheet" href="../assets/css/sl.css">
     <script src="../assets/js/myFirst.js"></script>
     <!--<script src="../assets/js/amazeui.js"></script>-->
     <style>
-        a{
-            text-decoration: none;
-            color:black;
-        }
 
-        a:active{
-            color: red;
-        }
-        li{
-            padding:0.5rem;
-        }
-        #leftNav ul{
-            background-color: #FFFFFF;
-        }
-        #leftNav li{
-            border-bottom: 1px solid #E2E2E2;
-            border-right: 1px solid #E2E2E2;
-            text-align: center;
-        }
-        #leftNav li.active{
-            background-color: #F4F4F4;
-            border-right: 1px solid #F4F4F4;
-        }
-        .w-5{
-            width:25%;
-        }
     </style>
 </head>
 <body>
@@ -181,17 +157,24 @@
 
             <!--</ul>-->
         </div>
+        <section>
+            <h5>三重一大</h5>
+            <ul>
+                <li>流转中</li>
+                <li>已归档</li>
+            </ul>
+        </section>
 
 </div>
-<div style="width: 100%; position: fixed;left: 0px;right: 0px;height: 3rem; background-color: #FFFFFF;border-top: 1px solid #BEBEBE;" class="sl-flex-row-center-center" id="bottom-nav">
-    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><span style="font-size: 0.8rem;">主页</span></div>
-    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><span style="font-size: 0.8rem;">行政</span></div>
-    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><span style="font-size: 0.8rem;">人事</span></div>
-    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><span style="font-size: 0.8rem;">财务</span></div>
-    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><span style="font-size: 0.8rem;">党政</span></div>
+<div style="width: 100%; position: fixed;left: 0px;right: 0px;height: 3rem; background-color: #FFFFFF;border-top: 1px solid #BEBEBE;" class="sl-flex-row-center-center sl-icon-color-CACACA" id="bottom-nav">
+    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><a style="font-size: 0.8rem;">主页</a></div>
+    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-legal" style="font-size: 1.5rem;"></i><a style="font-size: 0.8rem;">行政</a></div>
+    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-user-plus" style="font-size: 1.5rem;"></i><a style="font-size: 0.8rem;">人事</a></div>
+    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-money" style="font-size: 1.5rem;"></i><a style="font-size: 0.8rem;">财务</a></div>
+    <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-paper-plane" style="font-size: 1.5rem;"></i><a  href="party.html" style="font-size: 0.8rem;">党政</a></div>
 </div>
 
-r
+
 
 </body>
 <script>
