--- a/html/test.html
+++ b/html/test.html
@@ -4,61 +4,33 @@
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
     <title>图片滚动</title>
 </head>
+<link rel="stylesheet" href="../assets/css/amazeui.css">
+<link rel="stylesheet" href="../assets/css/sl.css">
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/amazeui.js"></script>
 <body>
-<style type="text/css">
-    <!--
-    #demo {
-        background: #FFF;
-        overflow:hidden;
-        border: 1px dashed #CCC;
-        width: 500px;
-    }
-    #demo img {
-        border: 3px solid #F2F2F2;
-    }
-    #indemo {
-        float: left;
-        width: 800%;
-    }
-    #demo1 {
-        float: left;
-    }
-    #demo2 {
-        float: left;
-    }
-    -->
-</style>
-<div id="demo">
-    <div id="indemo">
-        <div id="demo1">
-            <a href="#"><img src="/jscss/demoimg/wall_s1.jpg" border="0" /></a>
-            <a href="#"><img src="/jscss/demoimg/wall_s2.jpg" border="0" /></a>
-            <a href="#"><img src="/jscss/demoimg/wall_s3.jpg" border="0" /></a>
-            <a href="#"><img src="/jscss/demoimg/wall_s4.jpg" border="0" /></a>
-            <a href="#"><img src="/jscss/demoimg/wall_s5.jpg" border="0" /></a>
-            <a href="#"><img src="/jscss/demoimg/wall_s6.jpg" border="0" /></a>
+
+<div class="am-tabs" data-am-tabs>
+    <ul class="am-tabs-nav am-nav am-nav-tabs">
+        <li class="am-active"><a href="#tab1">恣意</a></li>
+        <li><a href="#tab2">等候</a></li>
+        <li><a href="#tab3">流浪</a></li>
+    </ul>
+
+    <div class="am-tabs-bd">
+        <div class="am-tab-panel am-fade am-in am-active" id="tab1">
+            置身人群中<br>你只需要被淹没 享受 沉默<br>退到人群后<br>你只需给予双手 微笑 等候
         </div>
-        <div id="demo2"></div>
+        <div class="am-tab-panel am-fade" id="tab2">
+            走在忠孝东路<br>徘徊在茫然中<br>在我的人生旅途<br>选择了多少错误<br>我在睡梦中惊醒<br>感叹悔言无尽<br>恨我不能说服自己<br>接受一切教训<br>让生命去等候<br>等候下一个漂流<br>让生命去等候<br>等候下一个伤口
+        </div>
+        <div class="am-tab-panel am-fade" id="tab3">
+            我就这样告别山下的家，我实在不愿轻易让眼泪留下。我以为我并不差不会害怕，我就这样自己照顾自己长大。我不想因为现实把头低下，我以为我并不差能学会虚假。怎样才能够看穿面具里的谎话？别让我的真心散的像沙。如果有一天我变得更复杂，还能不能唱出歌声里的那幅画？
+        </div>
     </div>
 </div>
 <script>
-    <!--
-    var speed=10;
-    var tab=document.getElementById("demo");
-    var tab1=document.getElementById("demo1");
-    var tab2=document.getElementById("demo2");
-    tab2.innerHTML=tab1.innerHTML;
-    function Marquee(){
-        if(tab2.offsetWidth-tab.scrollLeft<=0)
-            tab.scrollLeft-=tab1.offsetWidth
-        else{
-            tab.scrollLeft++;
-        }
-    }
-    var MyMar=setInterval(Marquee,speed);
-    tab.onmouseover=function() {clearInterval(MyMar)};
-    tab.onmouseout=function() {MyMar=setInterval(Marquee,speed)};
-    -->
+
 </script>
 </body>
 </html>
