隐藏于显示

--- a/html/party.html
+++ b/html/party.html
@@ -124,16 +124,20 @@
         <!--右侧列表-->
         <div class="menu-right" >
             <div menu-index="0">
-                <h5>三重一大</h5>
+                <div class="sl-flex-row-center-space-between">
+                    <h5>三重一大</h5>
+                    <span>新建<span>三重一大</span></span>
+                </div>
+
                 <div class="sl-flex-row-center-flex-start document-state" >
-                    <div class="clicked-state" index="0">
+                    <div class="clicked-state " index="0">
                         <span>流转中</span>
                     </div>
-                    <div style="margin-left: 10px;" index="1">
+                    <div class="" style="margin-left: 0.4rem;" index="1">
                         <span>已归档</span>
                     </div>
                 </div>
-                <div class="running">
+                <div class="running ">
                     <div class="sl-flex-column-flex-start-flex-start content" >
                         <h4><span>三重一大</span>提醒</h4>
                         <div style="margin: 5px 0px;"  class="small-font">
@@ -148,7 +152,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="finished" style="display: none;">
+                <div class="finished " style="display: none;">
                     <div class="sl-flex-column-flex-start-flex-start content" >
                         <h4><span>三重一大</span>提醒</h4>
                         <div style="margin: 5px 0px;"  class="small-font">
@@ -164,88 +168,89 @@
                     </div>
                 </div>
             </div>
-            <div menu-index="1" style="display: none;">
-                <h5>三重一大</h5>
-                <div class="sl-flex-row-center-flex-start document-state" >
-                    <div class="clicked-state" index="0">
-                        <span>流转中</span>
-                    </div>
-                    <div style="margin-left: 10px;" index="1">
-                        <span>已归档</span>
-                    </div>
-                </div>
-                <div class="running">
-                    <div class="sl-flex-column-flex-start-flex-start content" >
-                        <h4><span>三重一大</span>提醒</h4>
-                        <div style="margin: 5px 0px;"  class="small-font">
-                            <span>登记事宜名称:</span>
-                            <span>开会1</span>
-                        </div>
-                        <span  class="small-font">2017-08-07 09:58:26</span>
-                        <hr class="hr"/>
-                        <span class="sl-flex-row-center-space-between width100" >
-                            <span>查看</span>
-                            <i class="fa fa-angle-right"></i>
-                        </span>
-                    </div>
-                </div>
-                <div class="finished" style="display: none;">
-                    <div class="sl-flex-column-flex-start-flex-start content" >
-                        <h4><span>三重一大</span>提醒</h4>
-                        <div style="margin: 5px 0px;"  class="small-font">
-                            <span>登记事宜名称:</span>
-                            <span>归档1</span>
-                        </div>
-                        <span  class="small-font">2017-08-07 09:58:26</span>
-                        <hr class="hr"/>
-                        <span class="sl-flex-row-center-space-between width100">
-                        <span>查看</span>
-                        <i class="fa fa-angle-right"></i>
-                    </span>
-                    </div>
-                </div>
-            </div>
-            <div menu-index="2"  style="display: none;">
-                <h5>三重一大</h5>
-                <div class="sl-flex-row-center-flex-start document-state" >
-                    <div class="clicked-state" index="0">
-                        <span>流转中</span>
-                    </div>
-                    <div style="margin-left: 10px;" index="1">
-                        <span>已归档</span>
-                    </div>
-                </div>
-                <div class="running">
-                    <div class="sl-flex-column-flex-start-flex-start content" >
-                        <h4><span>三重一大</span>提醒</h4>
-                        <div style="margin: 5px 0px;"  class="small-font">
-                            <span>登记事宜名称:</span>
-                            <span>开会1</span>
-                        </div>
-                        <span  class="small-font">2017-08-07 09:58:26</span>
-                        <hr class="hr"/>
-                        <span class="sl-flex-row-center-space-between width100" >
-                            <span>查看</span>
-                            <i class="fa fa-angle-right"></i>
-                        </span>
-                    </div>
-                </div>
-                <div class="finished" style="display: none;">
-                    <div class="sl-flex-column-flex-start-flex-start content" >
-                        <h4><span>三重一大</span>提醒</h4>
-                        <div style="margin: 5px 0px;"  class="small-font">
-                            <span>登记事宜名称:</span>
-                            <span>归档1</span>
-                        </div>
-                        <span  class="small-font">2017-08-07 09:58:26</span>
-                        <hr class="hr"/>
-                        <span class="sl-flex-row-center-space-between width100">
-                        <span>查看</span>
-                        <i class="fa fa-angle-right"></i>
-                    </span>
-                    </div>
-                </div>
-            </div>
+            <!--<div menu-index="1" style="display: none;">-->
+                <!--<h5></h5>-->
+                <!--<div class="sl-flex-row-center-flex-start document-state" >-->
+                    <!--<div class="clicked-state" index="0">-->
+                        <!--<span>流转中</span>-->
+                    <!--</div>-->
+                    <!--<div style="margin-left: 10px;" index="1">-->
+                        <!--<span>已归档</span>-->
+                    <!--</div>-->
+
+                <!--</div>-->
+                <!--<div class="running">-->
+                    <!--<div class="sl-flex-column-flex-start-flex-start content" >-->
+                        <!--<h4><span></span>提醒</h4>-->
+                        <!--<div style="margin: 5px 0px;"  class="small-font">-->
+                            <!--<span>登记事宜名称:</span>-->
+                            <!--<span>开会1</span>-->
+                        <!--</div>-->
+                        <!--<span  class="small-font">2017-08-07 09:58:26</span>-->
+                        <!--<hr class="hr"/>-->
+                        <!--<span class="sl-flex-row-center-space-between width100" >-->
+                            <!--<span>查看</span>-->
+                            <!--<i class="fa fa-angle-right"></i>-->
+                        <!--</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="finished" style="display: none;">-->
+                    <!--<div class="sl-flex-column-flex-start-flex-start content" >-->
+                        <!--<h4><span></span>提醒</h4>-->
+                        <!--<div style="margin: 5px 0px;"  class="small-font">-->
+                            <!--<span>登记事宜名称:</span>-->
+                            <!--<span>归档1</span>-->
+                        <!--</div>-->
+                        <!--<span  class="small-font">2017-08-07 09:58:26</span>-->
+                        <!--<hr class="hr"/>-->
+                        <!--<span class="sl-flex-row-center-space-between width100">-->
+                        <!--<span>查看</span>-->
+                        <!--<i class="fa fa-angle-right"></i>-->
+                    <!--</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div menu-index="2"  style="display: none;">-->
+                <!--<h5>三重一大</h5>-->
+                <!--<div class="sl-flex-row-center-flex-start document-state" >-->
+                    <!--<div class="clicked-state" index="0">-->
+                        <!--<span>流转中</span>-->
+                    <!--</div>-->
+                    <!--<div style="margin-left: 10px;" index="1">-->
+                        <!--<span>已归档</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="running">-->
+                    <!--<div class="sl-flex-column-flex-start-flex-start content" >-->
+                        <!--<h4><span>三重一大</span>提醒</h4>-->
+                        <!--<div style="margin: 5px 0px;"  class="small-font">-->
+                            <!--<span>登记事宜名称:</span>-->
+                            <!--<span>开会1</span>-->
+                        <!--</div>-->
+                        <!--<span  class="small-font">2017-08-07 09:58:26</span>-->
+                        <!--<hr class="hr"/>-->
+                        <!--<span class="sl-flex-row-center-space-between width100" >-->
+                            <!--<span>查看</span>-->
+                            <!--<i class="fa fa-angle-right"></i>-->
+                        <!--</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="finished" style="display: none;">-->
+                    <!--<div class="sl-flex-column-flex-start-flex-start content" >-->
+                        <!--<h4><span>三重一大</span>提醒</h4>-->
+                        <!--<div style="margin: 5px 0px;"  class="small-font">-->
+                            <!--<span>登记事宜名称:</span>-->
+                            <!--<span>归档1</span>-->
+                        <!--</div>-->
+                        <!--<span  class="small-font">2017-08-07 09:58:26</span>-->
+                        <!--<hr class="hr"/>-->
+                        <!--<span class="sl-flex-row-center-space-between width100">-->
+                        <!--<span>查看</span>-->
+                        <!--<i class="fa fa-angle-right"></i>-->
+                    <!--</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
 
 
@@ -264,6 +269,7 @@
 
 </body>
 <script>
+    //文字排版
     $(document).ready(function () {
         var rem = new Rem();
         rem.adapterWidth_object();
@@ -276,7 +282,8 @@
             top: hWindow-hDiv+"px"
         });
 
-    })
+    });
+    //点击左边菜单，
     $("#leftNav ul").children('li').click(function () {
         //先获取是那个菜单的点击事件
         var index=$(this).index();//点击的元素在同辈中的索引位置
@@ -365,20 +372,29 @@
 
 
 //        $(this).css("background-color","#F4F4F4").css("border-right","1px solid #F4F4F4");
-    })
-    $("#quick").click(function () {
-        if($(this).attr("state") == "open" ){
-            $(this).attr("state","close");$("#index_child").css('display','none');
-        } else{
-            $(this).attr("state","open");$("#index_child").css('display','block');
-        }
+    });
 
-    })
+//    $("#quick").click(function () {
+//        if($(this).attr("state") == "open" ){
+//            $(this).attr("state","close");$("#index_child").css('display','none');
+//        } else{
+//            $(this).attr("state","open");$("#index_child").css('display','block');
+//        }
+//
+//    })
     //选项卡切换，样式的改变
-    $(".document-state div").click(function () {
+    $(".document-state").children().click(function () {
         $(this).addClass('clicked-state').siblings().removeClass('clicked-state');
-        var index = $(this).attr("index");
-        $(this).parent().siblings("div:eq("+index+")").css("display","block").siblings("div:not(.document-state)").css("display","none");
+        var index = $(this).index();
+//        $(this).parent().nextAll().eq().css("display","block").not(index).css("display","none");
+//        $(this).parent().nextAll().eq(index).css('display','block').not($(this)).addClass("after");
+        $(this).parent().nextAll().each(function (i,value) {
+            if(i == index){
+               $(this).css('display','block');
+            }else{
+                $(this).css('display','none');
+            }
+        })
     })
 
 </script>
